k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rudra-service
spec:
  type: LoadBalancer
  selector:
    app: ros2
  ports:
   - name: http
     port: 80
     targetPort: 8000
